src/objects/HandWrite__c.object
<CustomObject>
    <fields>
        <fullName>DataType__c</fullName>
        <label>データ種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>予定表</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HandWriteImg__c</fullName>
        <label>手書図</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ImgSize__c</fullName>
        <label>画像プロパティ</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetupDate__c</fullName>
        <label>指定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trajectory__c</fullName>
        <label>手書きの軌跡</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>手書き情報</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>手書き名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>